--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: 20%;
+    width: 10%;
 }
 
 .navrechts {
@@ -34,6 +34,8 @@
     margin-right: 20px;
 }
 .container {
+    display: flex;
+    justify-content: center;
     height: auto;
     width: 50%;
     margin: auto;
